Better diagnostics for Bug#59410

lock_rec_unlock(): Display the current SQL statement on failure.

rb://571 approved by Inaam Rana